...
      <Text style={{alignSelf: 'center', margin: 10, fontSize: 18}}>
        {domainObj.name}
      </Text>
      <Button
        style={{margin: 10}}
        mode="contained"
        testID="newUrlButton"
        onPress={onURLButtonClick}>
        Add URL
      </Button>
      <AddURLModal isVisible={showURLModal} onURLEntered={onURLEntered} />
      {urlList.length > 0 && (
        <FlatList
...
